--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "ast-types": "^0.8.4",
     "async": "^1.3.0",
     "copy-dir": "0.0.8",
+    "dotenv": "^8.1.0",
     "graphql": "^0.2.5",
     "inquirer": "^0.9.0",
     "js-sql-parser": "^1.2.0",
     "knex": "^0.8.6",
     "lodash": "^3.10.0",
     "mkdirp": "^0.5.1",
-    "mysql": "^2.8.0",
+    "mysql": "^2.17.1",
     "pg": "^4.4.1",
     "pluralize": "^1.1.2",
     "recast": "^0.10.26",
